Rough in page outlines

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,20 @@
 <footer class="panel--centered" role="contentinfo">
+
+    <ul>
+        <li>Twitter</li>
+        <li>Linkedin</li>
+        <li>Codepen</li>
+        <li>Gitub</li>
+        <li>Zenman?</li>
+        <li>Copyright</li>
+        <li>No 2nd nav</li>
+        <li>Pith</li>
+        <li>Privacy</li>
+        <li>Credits</li>
+        <li>Contact form?</li>
+        <li>"powered by" inducator</li>
+    </ul>
+
   <div class="grid">
     <div class="centered grid__col--6">
     	<img class="img--avatar" src="https://pbs.twimg.com/profile_images/578368788535455744/WhLtbEaB.jpeg">
