--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <!-- Capture and store a URL -->
-{% capture location %}{{ page.url | split:'/' }}{% endcapture %} 
+{% capture location %}{{ page.url | split:'/' }}{% endcapture %}
 <header class="main-header" role="banner">
   <div class="grid">
     <div class="grid__col--12">
@@ -7,20 +7,23 @@
         WebConfs
       </a>
       <nav class="navbar" role="navigation">
+<em>remember: use stickup sticky</em>
         <ul class="nav">
         {% for page in site.pages %}
           <!-- Compare the page title to the URL -->
           {% assign current = page.title | downcase %}
-          
+
           {% if page.title %}
           <li {% if location == current %} class="nav__item--current" {% else %} class="nav__item" {% endif %}>
             <a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
           </li>
           {% endif %}
-          
+
         {% endfor %}
         </ul>
       </nav>
     </div>
   </div>
+
+
 </header>
