--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,3 @@
-<!-- Capture and store a URL -->
-{% capture location %}{{ page.url | split:'/' }}{% endcapture %}
 <header>
-    Tomas Mulder's Portfolio Site
+    <h1>Tomas Mulder's Resume</h1>
 </header>
