--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,10 +1,8 @@
 ---
 layout: default
 ---
-<div class="grid">
-	<div class="grid__col--12 page">
-        <article class="post__content">
-            {{ content }}
-        </article>
+<div class="main-torso">
+	<div class="main-torso__inner">
+        {{ content }}
 	</div>
 </div>
