Configure site with zemplate sass and zen-build (js untested)

--- a/_sass/debris/_shame.scss
+++ b/_sass/debris/_shame.scss
@@ -1,7 +1,8 @@
----
+/*------------------------------------*\
+            (╯°□°）╯︵ ┻━┻
+\*------------------------------------*/
 
----
-
+// just so my eyes don't hurt
 body {
     background-color: #00caa9;
     font-family: 'Vollkorn', serif;
