Rough in icon slider

--- a/_sass/moons/components/_timeline.scss
+++ b/_sass/moons/components/_timeline.scss
@@ -1,11 +1,10 @@
 /*------------------------------------*\
-    ::Tri Col Layout
+    ::Timeline
 \*------------------------------------*/
 
 /*------------------------------------*\
     ::Common Vars
 \*------------------------------------*/
-
 $timeline-width:            3em; // timeline bar's width
 $timeline-gaps:             7em; // each year period's height
 $timeline-border-width:     3px; // all timeline borders
