--- a/_sass/planets/base/_text_level_semantics.scss
+++ b/_sass/planets/base/_text_level_semantics.scss
@@ -5,6 +5,7 @@
 \*------------------------------------*/
 body { // global text-level stying
 	font-family: $fam--1;
+	color: $color-2;
 }
 abbr[title] {
 	border-bottom: 1px dotted;
