Remove shame layout and turn off torso debug mode

--- a/_sass/planets/layouts/_torso.scss
+++ b/_sass/planets/layouts/_torso.scss
@@ -1,7 +1,7 @@
 /*------------------------------------*\
     ::Torso
 \*------------------------------------*/
- /*DEBUG*/ $solarsystem: 1px;.main-torso {transform: scale(.9);}
+ // /*DEBUG*/ $solarsystem: 1px;.main-torso {transform: scale(.9);}
 .main-torso {
     @include clearfix;
     position: relative;
