Move debug to shame file

--- a/_sass/debris/_shame.scss
+++ b/_sass/debris/_shame.scss
@@ -1,3 +1,4 @@
 /*------------------------------------*\
             (╯°□°）╯︵ ┻━┻
 \*------------------------------------*/
+/*DEBUG*/ $solarsystem: 1px;.main-torso {transform: scale(.9);}
