Rework spacing to accomodate headers and footers

--- a/_sass/debris/_shame.scss
+++ b/_sass/debris/_shame.scss
@@ -1,4 +1,4 @@
 /*------------------------------------*\
             (╯°□°）╯︵ ┻━┻
 \*------------------------------------*/
-/*DEBUG*/ $solarsystem: 1px;.main-torso {transform: scale(.9);}
+// /*DEBUG*/.main-torso {transform: scale(.9); transform-origin: center top;}.timeline__col { width: 33.33% !important; }
