--- a/_sass/moons/components/_main_head.scss
+++ b/_sass/moons/components/_main_head.scss
@@ -1,4 +1,7 @@
 /*------------------------------------*\
-    ::Torso
+    ::Main Head
 \*------------------------------------*/
-
+.main-head {
+    position: fixed;
+    height: 100vh;
+}
