--- a/_sass/stars/zemplate/_variables.scss
+++ b/_sass/stars/zemplate/_variables.scss
@@ -12,9 +12,9 @@
 \*------------------------------------*/
 
 //primary colors / page anchor tags
-$color-1:           #04d2b1;
-$color-1-light:     #19ffda;
-$color-1-dark:      #00caa9;
+$color-1:           #04d2b1; // e.g. light signature
+$color-1-light:     #19ffda; // e.g. headings
+$color-1-dark:      #00caa9; // e.g. background
 
 //secondary colors / global nav and Local Nav.
 $color-2:           #284e64;
