--- a/_sass/moons/components/_icon_slider.scss
+++ b/_sass/moons/components/_icon_slider.scss
@@ -36,7 +36,7 @@ $icon-slider-speed: 500ms;
     &__slide {
         width: 100%;
         display: inline-block;
-        font-size: 1rem;
+        font-size: 2.3vw;
         vertical-align: top;
         h3 {
             white-space: normal;
@@ -73,15 +73,16 @@ $icon-slider-speed: 500ms;
         &:before {
             top: 0;
             bottom: 0;
-            width: 3px;
+            width: .3em;
+            margin-left: 1.55em;
             background-image: linear-gradient(
                 0deg,
                 $color-2,
                 $color-2 50%,
-                $color-1-light calc(50% + 1px),
+                $color-1-light 50%,
                 $color-1-light
             );
-            background-size: 3px 200%;
+            background-size: 100% 200%;
             background-position: 0 -200%;
             transition: background-position 0ms $icon-slider-speed;
         }
@@ -91,16 +92,16 @@ $icon-slider-speed: 500ms;
             width: 1em;
             height: 1em;
             background: $color-bg--dark;
-            border: 3px solid $color-2;
+            border: .2em solid $color-2;
             border-radius: 50%;
-            transform: translate(calc(-50% + 1.5px), calc(50% - .5em));
+            transform: translate(calc(-50% + 1.5px), calc(50% - 0.3em));
             transition: bottom 0ms $icon-slider-speed;
         }
         span {
             display: inline-block;
             white-space: nowrap;
             transform: translate(-6%, 100%) rotate(-85deg);
-            transform-origin: .25em -.25em;
+            transform-origin: 0.55em -0.35em;
             font-size: .9em;
             &:after {
                 content: "";
