--- a/_sass/moons/components/_icon_slider.scss
+++ b/_sass/moons/components/_icon_slider.scss
@@ -57,8 +57,10 @@ $icon-slider-speed: 500ms;
         white-space: normal;
     }
     &__stat {
+        position: static;
         display: inline-block;
         width: 12%;
+        padding-left: 0;
         list-style: none;
         float: left;
         line-height: 1;
@@ -73,7 +75,9 @@ $icon-slider-speed: 500ms;
         &:before {
             top: 0;
             bottom: 0;
+            left: auto;
             width: .3em;
+            height: auto;
             margin-left: 1.55em;
             background-image: linear-gradient(
                 0deg,
@@ -84,6 +88,8 @@ $icon-slider-speed: 500ms;
             );
             background-size: 100% 200%;
             background-position: 0 -200%;
+            border-radius: 0;
+            border: 0;
             transition: background-position 0ms $icon-slider-speed;
         }
         &:after {
