--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,12 +1,20 @@
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
-  <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+    <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
+    <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
-  <link rel="stylesheet" href="{{ "/css/style.css" | prepend: site.baseurl }}">
-  <link href='https://fonts.googleapis.com/css?family=Vollkorn:400,700,400italic,700italic|Signika:700,300' rel='stylesheet' type='text/css'>
-  <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
-</head>
+    <!-- <link rel="stylesheet" href="{{ "/css/style.css" | prepend: site.baseurl }}"> -->
+    <link href='https://fonts.googleapis.com/css?family=Vollkorn:400,700,400italic,700italic|Signika:700,300' rel='stylesheet' type='text/css'>
+    <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+    <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
+    {% if page.default_css %}
+        {% for stylesheet in page.default_css %}
+            <link rel="stylesheet" href="/css/{{ stylesheet }}.css" media="screen" type="text/css">
+        {% endfor %}
+    {% endif %}
+    {% if page.page_css %}
+        {% for stylesheet in page.page_css %}
+            <link rel="stylesheet" href="/css/{{ stylesheet }}.css" media="screen" type="text/css">
+        {% endfor %}
+    {% endif %}
