Edit js compiler and revise rotate function

--- a/_sass/stars/zemplate/_extends.scss
+++ b/_sass/stars/zemplate/_extends.scss
@@ -3,3 +3,13 @@
     ----------------------------------*
     ::
 \*------------------------------------*/
+%bg-logo {
+    content: "TEST";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
