Convert hero to non-js variation

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,10 @@
-<header class="main-head js-logo-bg">
-    <h1>Tomas Mulder's Resume</h1>
+<header class="main-head">
+    <div class="logo">
+        <div class="logo__first">
+            <span><svg><use xlink:href="/images/general.sprite.svg#signature"></use></svg></span>
+        </div>
+        <div class="logo__second">
+            <span><svg><use xlink:href="/images/general.sprite.svg#signature"></use></svg></span>
+        </div>
+    </div>
 </header>
