Add content to timeline

--- a/_sass/debris/_shame.scss
+++ b/_sass/debris/_shame.scss
@@ -1,4 +1,72 @@
 /*------------------------------------*\
             (╯°□°）╯︵ ┻━┻
 \*------------------------------------*/
-// /*DEBUG*/.main-torso {transform: scale(.9); transform-origin: center top;}.timeline__col { width: 33.33% !important; }
+/*------------------------------------*\
+    ::Icon Slider Layout
+\*------------------------------------*/
+$icon-slider-speed: 500ms;
+.icon-slider {
+    &__stat {
+        &:after { // circle
+            backface-visibility: hidden; // cuts pixels without this :-(
+        }
+    }
+}
+
+// /*------------------------------------*\
+//     ::Debug as Small
+// \*------------------------------------*/
+// .main-torso {transform: scale(.9); transform-origin: center top;}.timeline__col { width: 33.33% !important; }
+
+// /*------------------------------------*\
+//     ::Make it small so it's easer to edit text
+// \*------------------------------------*/
+// .exp__timeline,.main-head,.detail {display: none;}
+// .timeline__col {width: 100%;}
+// .timeline {margin-top: 0;&:before,&:after {display: none;}}
+// .exp__group,.achieve__group {position: static;height: auto;top: 0;transform: none;border-bottom: 1px solid red;}
+
+// /*------------------------------------*\
+//     ::Exp Position Debugger
+// \*------------------------------------*/
+// .exp { // center col
+//     &__group {
+//         &--zenman {
+//             @include year(2012, 2016);
+//              /*TEMP*/box-shadow:0 0 0 1px rgba(mediumaquamarine,.5) inset;background-color:rgba(mediumaquamarine,.5);
+//         }
+//         &--du {
+//             @include year(2010, 2012);
+//              /*TEMP*/box-shadow:0 0 0 1px rgba(red,.5) inset;background-color:rgba(red,.5);
+//         }
+//         &--usmc {
+//             @include year(2006, 2010);
+//              /*TEMP*/box-shadow:0 0 0 1px rgba(gray,.5) inset;background-color:rgba(gray,.5);
+//         }
+//         &--tech {
+//             @include year(2002, 2006);
+//              /*TEMP*/box-shadow:0 0 0 1px rgba(green,.5) inset;background-color:rgba(green,.5);
+//         }
+//         // /* ALL DEBUG */box-shadow:0 0 0 1px rgba(tomato,.5) inset !important;background-color:rgba(tomato,.5) !important;
+//     }
+// }
+
+// /*------------------------------------*\
+//     ::Icon Slider Debug
+// \*------------------------------------*/
+// .icon-slider__stat {
+//     &:nth-child(2) {
+//         &:before {
+//             background-image: linear-gradient(
+//                 0deg,
+//                 red,
+//                 red 50%,
+//                 whitesmoke 50%,
+//                 whitesmoke
+//             );
+//         }
+//         &:after {
+//             border-color: blue !important;
+//         }
+//     }
+// }
