--- a/_sass/moons/components/_timeline.scss
+++ b/_sass/moons/components/_timeline.scss
@@ -6,8 +6,8 @@
     ::Common Vars
 \*------------------------------------*/
 $timeline-width:            3em; // timeline bar's width
-$timeline-gaps:             7em; // each year period's height
-$timeline-border-width:     3px; // all timeline borders
+$timeline-gaps:             8em; // each year period's height
+$timeline-border-width:     .1875em; // all timeline borders
 $year-word-height:          .85em; // the height of the "20xx" word for centering
 
 /*------------------------------------*\
@@ -33,12 +33,11 @@ $year-word-height:          .85em; // the height of the "20xx" word for centerin
     width: 100%;
     &:before,
     &:after {
-        content: "TEST";
+        content: "";
         display: block;
         position: absolute;
         top: 0;
         bottom: 0;
-        width: 50%;
     }
     &:before {
         left: 0;
@@ -47,6 +46,10 @@ $year-word-height:          .85em; // the height of the "20xx" word for centerin
             transparent,
             rgba($color-bg--dark,.85) 5em
         );
+        width: 33.33%;
+        @include bp($solarsystem){
+            width: 50%;
+        }
     }
     &:after {
         right: 0;
@@ -55,6 +58,10 @@ $year-word-height:          .85em; // the height of the "20xx" word for centerin
             transparent,
             rgba($color-bg--light,.94) 5em
         );
+        width: 66.66%;
+        @include bp($solarsystem){
+            width: 50%;
+        }
     }
     &__col {
         position: relative;
@@ -71,21 +78,31 @@ $year-word-height:          .85em; // the height of the "20xx" word for centerin
     }
 }
 // .detail { // left col
-
+//      uncomment if it's needed :-)
 // }
+.exp,
+.achieve {
+    h1, h2, h3, h5, h6 {
+        color: $color-1-dark;
+    }
+    h3 + h4 {
+        margin-top: -.4em;
+        margin-bottom: .4em;
+    }
+}
 .exp { // center col
     @include clearfix();
     position: relative;
     padding-right: 0;
-    h1, h2, h3, h5, h6 {
-        color: $color-1-dark;
+    font-size: 1.2vw;
+    @include bp($solarsystem){
+        font-size: 1rem;
     }
     &__group {
         position: absolute;
         left: 0;
         right: $timeline-width;
         padding: 0 $gap;
-         // /* DEBUG */box-shadow:0 0 0 1px rgba(tomato,.5) inset;background-color:rgba(tomato,.5);
         &--title {
             &:before,
             &:after {
@@ -105,19 +122,19 @@ $year-word-height:          .85em; // the height of the "20xx" word for centerin
             @include year(2002, 2006);
         }
         &:before,
-        &:after {
+        &:after { // circle/line for exp
             content: "";
             position: absolute;
             border: $timeline-border-width solid $color-2;
             z-index: 10;
         }
-        &:before {
+        &:before { // line for exp
             left: 0;
             right: 0;
             bottom: 0;
             border-width: $timeline-border-width 0 0;
         }
-        &:after {
+        &:after { // circle for exp
             right: -$timeline-border-width*.5;
             bottom: $timeline-border-width*.4;
             width: 1em;
@@ -136,12 +153,12 @@ $year-word-height:          .85em; // the height of the "20xx" word for centerin
         padding: 0;
     }
     &__year {
-         // /*TEMP*/box-shadow:0 0 0 1px rgba(purple,.5) inset;background-color:rgba(purple,.5);
         position: relative;
         display: block;
         text-align: center;
         width: 100%;
         height: $timeline-gaps;
+        margin: 0;
         padding-left: 0;
         span {
             font-size: .75em;
@@ -170,6 +187,10 @@ $year-word-height:          .85em; // the height of the "20xx" word for centerin
     right: 0;
     top: 0;
     bottom: 0;
+    font-size: 1.2vw;
+    @include bp($solarsystem){
+        font-size: 1rem;
+    }
     @include bp($solarsystem){
         position: relative;
         width: 100%;
@@ -180,36 +201,66 @@ $year-word-height:          .85em; // the height of the "20xx" word for centerin
         right: 0;
         padding: 0 $gap 0 3em;
         transform: translateY(-50%);
-        &--senior {
+        &--title {
+            transform: none;
+            &:before,
+            &:after {
+                display: none;
+            }
+            @include bp($solarsystem){
+                border-top: $timeline-border-width solid $color-2;
+            }
+        }
+        &--zen-principle {
+            @include year(false, 2016);
+        }
+        &--zen-lead {
+            @include year(false, 2015);
+        }
+        &--zen-senior {
+            @include year(false, 2014);
+        }
+        &--du-4 {
             @include year(false, 2012);
         }
-        &--lead {
-
+        &--usmc-good-cookie {
+            @include year(false, 2009);
         }
-        &--goodcookie {
-
+        &--usmc-commendation {
+            @include year(false, 2007);
         }
-        &--usmc {
-
+        &--tech-4 {
+            @include year(false, 2006);
         }
-        &--tech {
-
+        &--tech-achievement {
+            @include year(false, 2005.65);
+        }
+        @include bp($solarsystem){
+            position: relative;
+            top: 0;
+            margin-bottom: $gap;
+            margin-left: 50%;
+            padding: 0 $gap;
+            transform: none;
         }
         &:before,
-        &:after {
+        &:after { // line/circle for achieve
             content: "";
             position: absolute;
             border: $timeline-border-width solid $color-2;
             z-index: 10;
         }
-        &:before {
+        &:before { // line for achieve
             left: 0;
             width: 2em;
             top: 50%;
             border-width: $timeline-border-width 0 0;
             transform: translateY(-100%);
+            @include bp($solarsystem){
+                display: none;
+            }
         }
-        &:after {
+        &:after { // circle for achieve
             left: -.1em;
             top: calc(50% - .1em);
             width: 1em;
@@ -217,6 +268,21 @@ $year-word-height:          .85em; // the height of the "20xx" word for centerin
             border-radius: 50%;
             background-color: $color-bg--light;
             transform: translate(-50%, -50%);
+            @include bp($solarsystem){
+                position: absolute;
+                top: .4em;
+                left: $gap;
+                width: .5em;
+                height: .5em;
+                border: .15em solid $color-2;
+                border-radius: 50%;
+                transform: none;
+            }
+        }
+        p {
+            @include bp($solarsystem){
+                padding: 0 $gap;
+            }
         }
     }
 }
