--- a/_sass/moons/components/_main_head.scss
+++ b/_sass/moons/components/_main_head.scss
@@ -3,8 +3,9 @@
 \*------------------------------------*/
 .main-head {
     position: fixed;
+    z-index: -1;
     height: 100vh;
-    width: 100%;
+    width: 100vw;
     .logo {
         &__first {
             background-color: $color-bg--dark;
@@ -14,6 +15,7 @@
             }
         }
         &__second {
+            background-color: #fff;
             svg {
                 // fill: darken($color-2-lightest,3%);
                 fill: $color-bg--dark;
