--- a/_sass/planets/base/_animations.scss
+++ b/_sass/planets/base/_animations.scss
@@ -9,3 +9,11 @@
         opacity: 1;
     }
 }
+%animation--fade-in {
+    animation-name: fade-in;
+    animation-fill-mode: forwards;
+    animation-duration: 1000ms;
+    animation-delay: 1000ms;
+    animation-timing-function: ease-in-out;
+    opacity: 0;
+}
