--- a/_sass/moons/components/timeline/__timeline-global.scss
+++ b/_sass/moons/components/timeline/__timeline-global.scss
@@ -43,10 +43,10 @@ $year-word-height:          .85em; // the height of the "20xx" word for centerin
     }
 }
 %dark-col {
-    background-color: rgba($color-1-dark,.8);
+    z-index: 10;
 }
 %light-col {
-    background-color: rgba(#fff, .8);
+    z-index: 10;
     h1, h2, h3, h5, h6 {
         color: $color-1-dark;
     }
@@ -67,10 +67,29 @@ $year-word-height:          .85em; // the height of the "20xx" word for centerin
     float: left;
     &:before,
     &:after {
-        content: "";
-        display: block;
-        position: absolute;
-        top: 0;
-        bottom: 0;
+       content: "";
+       display: block;
+       position: fixed;
+       z-index: 0;
+       top: 0;
+       bottom: 0;
+    }
+    &:before { // dark overlay
+        @extend %animation--fade-in;
+       left: 0;
+       right: 66.66%;
+       background-color: rgba($color-1-dark,.85);
+       @include bp($solarsystem){
+            right: 50%;
+       }
+    }
+    &:after { // light overlay
+        @extend %animation--fade-in;
+        left: 33.33%;
+        right: 0;
+        background-color: rgba(#fff, .92);
+        @include bp($solarsystem){
+            left: 50%;
+        }
     }
 }
