--- a/_sass/moons/components/_main-head.scss
+++ b/_sass/moons/components/_main-head.scss
@@ -6,6 +6,7 @@
     z-index: -1;
     height: 100vh;
     width: 100vw;
+display: none;
     .logo {
         &__first {
             background-color: $color-bg--dark;
